Добавлены недостающие методы